<resources>
    <string name="app_name">DinoQuestion And Kids</string>

    <string name="error">ERROR:</string>
    <string name="completarCampos">Todos los campos deben estar completados</string>
    <string name="noInicioSesion">No se ha podido iniciar sesión</string>

    <string name="usuarios">Usuarios</string>
    <string name="nombre">nombre</string>
    <string name="correo">correo</string>

    <string name="minimo_contraseña">La contraseña debe que tener un mínimo de 6 caracteres</string>
    <string name="contrasena">contraseña</string>
    <string name="no_datos">No se han podido crear los datos</string>
    <string name="usuario_ok">Usuario registrado correctamente</string>
    <string name="usuario_no_registrado">No se han podido registrar el usuario</string>
    <string name="cancel">El usuario canceló</string>

    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_text_4">Tab 4</string>
    <string name="tab_text_5">Tab 5</string>
    <string name="tab_text_6">Tab 6</string>
    <string name="tab_text_7">Tab 7</string>
    <string name="tab_text_8">Tab 8</string>

    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="pregunta_sonido">¿SONIDO?</string>
    <string name="descarga">Descarga la app\n</string>
    <string name="descarga_url"><![CDATA[https://play.google.com/store/apps/details?id=com.whatsapp&hl=es_419]]></string>
    <string name="pos">posicion</string>
    <string name="dinos">Dinosaurios</string>
    <string name="anky">Ankylosaurus</string>
    <string name="carno">Carnotaurus</string>
    <string name="compso">Compsognathus</string>
    <string name="diplo">Diplodocus</string>
    <string name="igua">Iguanodon</string>
    <string name="micro">Microraptor</string>
    <string name="orni">Ornithomimus</string>
    <string name="ptero">Pterodactylus</string>
    <string name="stego">Stegosaurus</string>
    <string name="trice">Triceratops</string>
    <string name="tyra">Tyrannosaurus Rex</string>
    <string name="velo">Velociraptor</string>
    <string name="no_acceso_datos">No se ha podido acceder a los datos</string>
    <string name="activity">activity</string>
    <string name="hist">Historia</string>
    <string name="linea">LineaTemporalActivity</string>
    <string name="datos_erroneos">Usuario o Contraseña erroneos</string>
    <string name="puntos">puntos</string>
    <string name="puntos_maximos">puntos maximos</string>
    <string name="nivel">nivel</string>
    <string name="vidas">vidas</string>
    <string name="enviando">Enviando correo...</string>
    <string name="introducir">Tiene que introducir un correo registrado</string>
    <string name="restablecer">Se ha enviado un correo para restablecer la contraseña</string>
    <string name="no_restablecer">No se pudo enviar el correo electrónico para restablecer la contraseña</string>
    <string name="correcta">CORRECTA</string>
    <string name="incorrecta">INCORRECTA</string>
    <string name="nivel_tipo2">NIVEL</string>
    <string name="preguntas">Preguntas</string>
    <string name="n1">nivel1</string>
    <string name="perder">HAS PERDIDO, INTENTALO OTRA VEZ</string>
    <string name="ganar">PASAS DE NIVEL, ENHORABUENA!!!</string>
    <string name="n2">nivel2</string>
    <string name="pasar_nivel">PASAS DE NIVEL, ENHORABUENA!!!</string>
    <string name="n3">nivel3</string>
    <string name="n4">nivel4</string>
    <string name="n5">nivel5</string>
    <string name="n6">nivel6</string>
    <string name="ganar_fin">HAS GANADO EL JUEGO, ENHORABUENA!!!</string>
    <string name="juegoActivity">JuegoActivity</string>
    <string name="boton">boton</string>
    <string name="puzzle_fin">ENHORABUENA, HAS TERMINADO EL PUZZLE!!!</string>
    <string name="puzzle_elejir">¿Quieres elejir otro puzzle?</string>
    <string name="puzzle_disfruta">Disfruta de tu puzzle terminado</string>
    <string name="hola">Hola, Mi nombre es Selene y soy la creadora de esta aplicación, espero que
        te guste y te lo pases muy bien.\n\nEsta app ha sido creada como parte del proyecto de fin
        de Ciclo de grado superior Desarrollo de Aplicaciones Multiplataforma.</string>
    <string name="descripcion">Descripción de cada uno de los dinosaurios segun la posicion que sea clicada.</string>
    <string name="has_ganado">¡¡¡ENHORABUENA!!!\nHAS GANADO</string>
    <string name="jugar">jugar</string>
    <string name="recuerda_lo_aprendido">Recuerda lo Aprendido</string>
    <string name="nombre_juego">Nombre:</string>
    <string name="puntos_juego">Puntos:</string>
    <string name="vidas_juego">Vidas:</string>
    <string name="nivel1_juego">NIVEL 1</string>
    <string name="preguntas_juego">Preguntas de cada nivel, prueba para ver como se veria un texto la mar de largo</string>
    <string name="comprobar_juego">Comprobar</string>
    <string name="nivel2_juego">NIVEL 2</string>
    <string name="bonus">bonus</string>
    <string name="nivel3_juego">NIVEL 3</string>
    <string name="nivel4_juego">NIVEL 4</string>
    <string name="nivel5_juego">NIVEL 5</string>
    <string name="nivel6_juego">NIVEL 6</string>
    <string name="correo_hint">Correo</string>
    <string name="contrasena_hint">Contraseña</string>
    <string name="inicio_sesion">iniciar sesión</string>
    <string name="olvido_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="registrarse">registrarse</string>
    <string name="invitado">¿QUIERES ENTRAR COMO INVITADO?\n(No tendás acceso a todas las características)</string>
    <string name="bienvenido">Bienvenid@</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="linea_temporal_menu">línea temporal</string>
    <string name="dinosaurios_menu">dinosaurios</string>
    <string name="juego_menu">juego</string>
    <string name="puzzle_menu">puzzle</string>
    <string name="cerrar_sesion">cerrar sesión</string>
    <string name="has_perdido_otra_vez_ser">INTÉNTALO OTRA VEZ!!!</string>
    <string name="elige_tu_puzzle">ELIGE TU PUZZLE</string>
    <string name="nombre_hint">Nombre</string>
    <string name="restablecer_contrasena">restablecer contraseña</string>
    <string name="ajustes">Ajustes de sonido</string>
    <string name="acerca_de">Acerca de ...</string>
    <string name="compartir">Compartir</string>
    <string name="listo">Listo</string>
    <string name="info_puzzle">Arrastra las piezas hasta que se forme la imagen</string>
    <string name="salir_ono">Pulse ota vez para cerrar</string>
    <string name="nombre_actual">Nombre actual:</string>
    <string name="correo_actual">Correo actual:</string>
    <string name="nuevo_nombre">nuevo nombre</string>
    <string name="nuevo_correo">nuevo correo</string>
    <string name="pregunta_borrado_perfil">¿Estas seguro de querer eliminar tu perfil?</string>
    <string name="no_hay_datos">No hay datos para actualizar</string>
    <string name="sin_nombre">Sin nombre de usuario</string>
    <string name="usuario_actualizado">Usuario actualizado</string>
    <string name="usuario_no_actualizado">Usuario no actualizado</string>
    <string name="usuario_eliminado">Usuario eliminado</string>
    <string name="usuario_no_eliminado">Usuario no eliminado</string>

</resources>
