<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".menu.MenuActivity">
    <item
        android:id="@+id/ajustes"
        android:orderInCategory="1"
        android:title="@string/ajustes"
        app:showAsAction="never" />
    <item
        android:id="@+id/acercade"
        android:orderInCategory="100"
        android:title="@string/acerca_de"
        app:showAsAction="never" />
    <item
        android:id="@+id/compartir"
        android:icon="@drawable/ic_compartir"
        android:orderInCategory="10"
        android:title="@string/compartir"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/editarPerfil"
        android:orderInCategory="10"
        android:icon="@drawable/ic_perfil"
        android:title="Editar Perfil"
        app:showAsAction="ifRoom" />
</menu>
