<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/fondo"
    tools:context=".inicio.RegistroActivity">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/nombre_hint"
        android:textSize="19dp"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/correo_hint"
        android:textSize="19dp"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/contrasena_hint"
        android:textSize="19dp"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:background="@drawable/boton_redondo2"
            android:layout_marginBottom="75dp"
            android:textSize="18dp"
            android:textColor="@android:color/white"/>


    </LinearLayout>

</LinearLayout>