<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/fondo"
    tools:context=".inicio.LoginActivity">

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/correo_hint"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textSize="19dp"/>

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/contrasena_hint"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textSize="19dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inicio_sesion"
            android:layout_marginTop="30dp"
            android:background="@drawable/boton_redondo2"
            android:textColor="@android:color/white"
            android:textSize="18dp"/>
        <Button
            android:id="@+id/btnReestablecer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/olvido_contrasena"
            android:layout_marginBottom="25dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="17dp"
            android:background="@android:color/transparent"/>

    </LinearLayout>

</LinearLayout>