<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="10dp"
    android:paddingTop="30dp"
    android:background="@drawable/fondo_preguntas"
    tools:context=".juego.Juego2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/nombre_juego"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/puntos_juego"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/etPuntos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/vidas_juego"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <ImageView
            android:id="@+id/ivVidas"
            android:layout_width="70dp"
            android:layout_height="21dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/tres_vidas" />

    </LinearLayout>

    <TextView
        android:id="@+id/etNivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/nivel2_juego"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/tvPregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preguntas_juego"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RadioGroup
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/rbUno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>

            <RadioButton
                android:id="@+id/rbDos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>

            <RadioButton
                android:id="@+id/rbTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>

            <RadioButton
                android:id="@+id/rbCuatro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btnComprobar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/comprobar_juego"
            android:textColor="@android:color/white"
            android:textSize="17dp"
            android:background="@drawable/boton_redondo2"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnBonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:enabled="false"
        android:text="@string/bonus"
        android:textSize="15dp"
        android:textColor="@android:color/white"
        android:background="@drawable/boton_redondo"/>


</LinearLayout>