<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margen_interior_izquierdo"
    android:paddingRight="@dimen/margen_interior_derecho"
    android:paddingTop="@dimen/margen_interior_superior"
    android:background="@drawable/fondo_preguntas"
    tools:context=".juego.Juego4Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margen_superior_normal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margen_interior_mini"
            android:text="@string/nombre_juego"
            android:textSize="@dimen/letra_boton1"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margen_interior_mini"
            android:text="@string/puntos_juego"
            android:textSize="@dimen/letra_boton1"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etPuntos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margen_interior_mini"
            android:text="@string/vidas_juego"
            android:textSize="@dimen/letra_boton1"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/ivVidas"
            android:layout_width="@dimen/ancho_vidas"
            android:layout_height="@dimen/alto_vidas"
            android:layout_gravity="center"
            app:srcCompat="@drawable/tres_vidas" />

    </LinearLayout>

    <TextView
        android:id="@+id/etNivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/letra_normal"
        android:textStyle="bold"
        android:text="@string/nivel4_juego"
        android:layout_marginTop="@dimen/margen_superior_mini"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_superior_peque2">

        <TextView
            android:id="@+id/tvPregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preguntas_juego"
            android:textSize="@dimen/letra_boton1"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_superior_mini1">

        <RadioGroup
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/rbUno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/rbDos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/rbTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/rbCuatro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btnComprobar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/comprobar_juego"
            android:textColor="@android:color/white"
            android:textSize="@dimen/letra_boton1"
            android:background="@drawable/boton_redondo2"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnBonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margen_superior_mini"
        android:enabled="false"
        android:text="@string/bonus"
        android:textSize="@dimen/letra_boton2"
        android:textColor="@android:color/white"
        android:background="@drawable/boton_redondo"/>


</LinearLayout>