<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.PerfilActivity"
    android:orientation="vertical"
    android:padding="@dimen/margen_interior_normal1"
    android:background="@drawable/fondo99">

    <TextView
        android:id="@+id/tvBienvenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Perfil"
        android:textAlignment="center"
        android:textSize="@dimen/letra_normal_grande"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/margen_superior_mini"/>

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_actual"
        android:textColor="@android:color/black"
        android:textSize="@dimen/letra_normal_peque"
        android:layout_marginTop="@dimen/margen_superior_normal"
        android:background="@color/colorFondoTexto"/>

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_superior_peque"
        android:textSize="@dimen/letra_boton"
        android:textColor="@android:color/black"
        android:hint="@string/nuevo_nombre"
        android:padding="@dimen/margen_interior_mini"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correo_actual"
        android:textColor="@android:color/black"
        android:textSize="@dimen/letra_normal_peque"
        android:layout_marginTop="@dimen/margen_superior_normal1"
        android:background="@color/colorFondoTexto"/>

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_superior_peque"
            android:hint="@string/nuevo_correo"
            android:textSize="@dimen/letra_boton"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:padding="@dimen/margen_interior_mini"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnEditarPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Editar"
                android:background="@drawable/boton_redondo2"
                android:layout_marginBottom="@dimen/margen_inferior"
                android:layout_marginHorizontal="@dimen/margen_horizontal_grande"
                android:textSize="@dimen/letra_boton2"
                android:textColor="@android:color/white"/>
            <Button
                android:id="@+id/btnGuardarPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margen_horizontal_grande"
                android:layout_marginBottom="@dimen/margen_inferior"
                android:background="@drawable/boton_redondo2"
                android:text="Guardar cambios"
                android:textColor="@android:color/white"
                android:textSize="@dimen/letra_boton2" />
            <Button
                android:id="@+id/btnBorrarPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Darme de baja"
                android:background="@drawable/boton_redondo"
                android:layout_marginBottom="@dimen/margen_inferior"
                android:textSize="@dimen/letra_boton2"
                android:textColor="@android:color/white"
                android:layout_marginHorizontal="@dimen/margen_horizontal_medio1"/>
        </LinearLayout>
</LinearLayout>